imported old project

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,103 @@
 <html>
+    <head>
+        <title>Ryan Doyle - Portfolio</title>
+        <link rel="Stylesheet" href="../private/styles/style.css">
+        <link rel="Stylesheet" href="../private/styles/header.css">
+        <link rel="Stylesheet" href="../private/styles/project.css">
+        <link rel="Stylesheet" href="../private/styles/card.css">
 
+
+        <script src="./script/index.js"></script>
+    </head>
     <body>
-        <h1>Hello!</h1>
+
+
+        <div class="fancy-animation">
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+        </div>
+
+        <div class="topCard">
+            <h1>Ryan Doyle</h1>
+            <p>978.881.4997 | rrdoyle41@gmail.com | <a href="./resume.html">Resume</a> | <a href="./contact.html">Contact Me</a> | <a href="./examples.html">See Examples</a></p>
+        </div>
+
+
+        <div class="cardContainer">
+            <div class="Aboutcard">
+                <h1>About Me</h1>
+                <p>Hello, my name is Ryan I am a Senior in Highschool. 
+                    I am from Leominster Massachuttes. I have worked on a wide range of projects 
+                    and have gathered several different skills that may be of some use! I am always
+                    excited to learn new things and try out different experences! I hope i get to work with you 
+                    sometime. 
+                </p>
+            </div>
+            <div class="Experence">
+                <h1>My Experence</h1>
+                <ul>
+                    <li>HTML, CSS, Web Javascript (2)</li>
+                    <li>Backend Javascript/Node.Js (2)</li>
+                    <li>Roblox Studio Lua (1)</li>
+                    <li><a href="#blockly">CEO/Founder @ <a href="https://blocklycode.org">Blockly Code</a></a></li>
+                    <li><a href="#infin">Founder/Operations Manager @ Infin Passes</a></li>
+                    <li>Development Manager @ Foxbridge Studios</li>
+                    <li>Community Hero @ Autocode</li>
+                </ul>
+            </div>
+        </div>
+
+        
+
+
+
+        <div class="myProjects">
+            <div class="text">
+                <h1>My Projects</h1>
+            </div>
+
+            <div class="projectList">
+                <div class="projectCard" id="blockly">
+                        <h3><a href="https://blocklycode.org">Blockly Code</a></h3>
+                        <p class="underHead">Position: CEO</p>
+                        <p>Blockly Code is a very small student lead company that works with young inspiring
+                            developers teaching them the foundations of coding. I founded this company after 
+                            seeing how difficult it was for new developers to get a good solid course in Computer
+                            Science without having to pay a large sum of money. Blockly Code is founded on the 
+                            idea that anyone regardless of who you are can come and learn the basics of coding for free.
+                            This is by far the biggest project I have worked on, and yet the one I am most proud of!
+                        </p>
+                        <img src="./images/blockly.png" alt="Blockly Code Logo" class="projectImg">
+                </div>
+                <div class="projectCard" id="infin">
+                    <h3>Infin Passes</h3>
+                    <p class="underHead">Position: Owner/Founder</p>
+                    <p>Infin Passes is once again a very small student lead orgnzaition. Our main mission is 
+                        to help assist schools by creating them a customizable Happ Pass system that will fit 
+                        thier needs. This all started after I took AP computer science and for one of the project
+                        i made a demo version of what we have now. I then thought about scailing it up to fit an 
+                        entire school. Following that I fought my way up the line until the school eventualy bought it!
+                        This is the only product I made that I sell to others. 
+                    </p>
+                    <img src="./images/passes.png" alt="Infin Passes Logo" class="projectImg">
+                </div>
+            </div> <!--Project List-->
+        </div>
+        <div class="End">
+            <h1>Why Me?</h1>
+            <p>I am a young passionate developer who is excited to get the change to
+                work on new projects and to learn new things! I am determaned to bring the best possable 
+                product to all those who may user it. I am currently taking Web Design Classes to help 
+                improve my skills in this feild! I hope I am offered a change to work with you on an 
+                amazing project!
+            </p>
+        </div>
+        <div class="footer">
+            <p>(C) Ryan Doyle 2023</p>
+        </div>
     </body>
+
 
 </html>
