updated styles path

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <title>Ryan Doyle - Portfolio</title>
-        <link rel="Stylesheet" href="../private/styles/style.css">
-        <link rel="Stylesheet" href="../private/styles/header.css">
-        <link rel="Stylesheet" href="../private/styles/project.css">
-        <link rel="Stylesheet" href="../private/styles/card.css">
+        <link rel="Stylesheet" href="./styles/style.css">
+        <link rel="Stylesheet" href="./styles/header.css">
+        <link rel="Stylesheet" href="./styles/project.css">
+        <link rel="Stylesheet" href="./styles/card.css">
 
 
         <script src="./script/index.js"></script>
