--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
                             idea that anyone regardless of who you are can come and learn the basics of coding for free.
                             This is by far the biggest project I have worked on, and yet the one I am most proud of!
                         </p>
-                        <img src="./images/blockly.png" alt="Blockly Code Logo" class="projectImg">
+                        <img src="./images/blocklyLogo.png" alt="Blockly Code Logo" class="projectImg">
                 </div>
                 <div class="projectCard" id="infin">
                     <h3>Infin Passes</h3>
@@ -81,7 +81,24 @@
                         entire school. Following that I fought my way up the line until the school eventualy bought it!
                         This is the only product I made that I sell to others. 
                     </p>
-                    <img src="./images/passes.png" alt="Infin Passes Logo" class="projectImg">
+                    <img src="./images/infinLogo.png" alt="Infin Passes Logo" class="projectImg">
+                </div>
+                <div class="projectCard" id="ticketing">
+                    <h3>Advance Ticketing System</h3>
+                    <p class="underHead">Views: 61.3k | Installs: 57.3K</p>
+                    <p>This is one of my most sucessful apps I have published. With just under 60 thousand installs 
+                        you can clearly see that people love this app! I created it 2 years ago when I was just getting 
+                        started on my coding adventure! I saw that there wasn't very many open source ready to use apps out 
+                        there of a ticketing app just like the Ticketing Tool discord bot. So i set out to create something amazing. 
+                        Just a few months later I published the first version. and now just 2 years later I am still activly updating the 
+                        app to work with Discords new APIs! This app has also been featured in many different articals writting by
+                        many different people!
+                        <ul>
+                            <li><a href="https://autocode.com/guides/how-to-build-a-discord-moderation-bot/">How to build a Discord Moderation Bot?</a></li>
+                            <li><a href="https://www.youtube.com/watch?app=desktop&v=foAFFvtml5k">5 Discord bot you need</a></li>
+                        </ul>
+                    </p>
+                    <img src="./images/infinLogo.png" alt="Infin Passes Logo" class="projectImg">
                 </div>
             </div> <!--Project List-->
         </div>
