--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,9 @@
     <body>
 
 
-        <div class="fancy-animation">
-            <span class="item"></span>
-            <span class="item"></span>
-            <span class="item"></span>
-            <span class="item"></span>
-        </div>
-
         <div class="topCard">
             <h1>Ryan Doyle</h1>
-            <p>978.881.4997 | rrdoyle41@gmail.com | <a href="./resume.html">Resume</a> | <a href="./contact.html">Contact Me</a> | <a href="./examples.html">See Examples</a></p>
+            <p>978.881.4997 | rrdoyle41@gmail.com | <a href="./">Resume</a> | <a href="mailto:rrdoyle41@gmail.com">Contact Me</a></p>
         </div>
 
 
@@ -112,7 +105,7 @@
             </p>
         </div>
         <div class="footer">
-            <p>(C) Ryan Doyle 2023</p>
+            <p>© Ryan Doyle 2023</p>
         </div>
     </body>
 
