updated stats and page information

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
                     <li>Roblox Studio Lua (1)</li>
                     <li><a href="#blockly">CEO/Founder @ <a href="https://blocklycode.org">Blockly Code</a></a></li>
                     <li><a href="#infin">Founder/Operations Manager @ Infin Passes</a></li>
+                    <li><a href="#ticketing">Creator of the Advance Ticketing app @ Autocode</a></li>
                     <li>Development Manager @ Foxbridge Studios</li>
                     <li>Community Hero @ Autocode</li>
                 </ul>
@@ -78,7 +79,7 @@
                 </div>
                 <div class="projectCard" id="ticketing">
                     <h3>Advance Ticketing System</h3>
-                    <p class="underHead">Views: 61.3k | Installs: 57.3K</p>
+                    <p class="underHead">Views: 62.1k | Installs: 57.5K</p>
                     <p>This is one of my most sucessful apps I have published. With just under 60 thousand installs 
                         you can clearly see that people love this app! I created it 2 years ago when I was just getting 
                         started on my coding adventure! I saw that there wasn't very many open source ready to use apps out 
@@ -91,7 +92,7 @@
                             <li><a href="https://www.youtube.com/watch?app=desktop&v=foAFFvtml5k">5 Discord bot you need</a></li>
                         </ul>
                     </p>
-                    <img src="./images/infinLogo.png" alt="Infin Passes Logo" class="projectImg">
+                    <img src="./images/ticketing.png" alt="Advance Ticketing System Logo" class="projectImg">
                 </div>
             </div> <!--Project List-->
         </div>
@@ -105,7 +106,7 @@
             </p>
         </div>
         <div class="footer">
-            <p>© Ryan Doyle 2023</p>
+            <p>© Ryan Doyle 2023 All Rights Reserved</p>
         </div>
     </body>
 
