updated information & fixed typos

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,7 @@
             <div class="Experence">
                 <h1>My Experence</h1>
                 <ul>
-                    <li>HTML, CSS, Web Javascript (2)</li>
-                    <li>Backend Javascript/Node.Js (2)</li>
+                    <li>Full Stack Web Developer (2)</li>
                     <li>Roblox Studio Lua (1)</li>
                     <li><a href="#blockly">CEO/Founder @ <a href="https://blocklycode.org">Blockly Code</a></a></li>
                     <li><a href="#infin">Founder/Operations Manager @ Infin Passes</a></li>
@@ -42,10 +41,6 @@
                 </ul>
             </div>
         </div>
-
-        
-
-
 
         <div class="myProjects">
             <div class="text">
@@ -71,7 +66,7 @@
                     <p>Infin Passes is once again a very small student lead orgnzaition. Our main mission is 
                         to help assist schools by creating them a customizable Happ Pass system that will fit 
                         thier needs. This all started after I took AP computer science and for one of the project
-                        i made a demo version of what we have now. I then thought about scailing it up to fit an 
+                        I made a demo version of what we have now. I then thought about scailing it up to fit an 
                         entire school. Following that I fought my way up the line until the school eventualy bought it!
                         This is the only product I made that I sell to others. 
                     </p>
@@ -83,7 +78,7 @@
                     <p>This is one of my most sucessful apps I have published. With just under 60 thousand installs 
                         you can clearly see that people love this app! I created it 2 years ago when I was just getting 
                         started on my coding adventure! I saw that there wasn't very many open source ready to use apps out 
-                        there of a ticketing app just like the Ticketing Tool discord bot. So i set out to create something amazing. 
+                        there of a ticketing app just like the Ticketing Tool discord bot. So I set out to create something amazing. 
                         Just a few months later I published the first version. and now just 2 years later I am still activly updating the 
                         app to work with Discords new APIs! This app has also been featured in many different articals writting by
                         many different people!
@@ -98,11 +93,10 @@
         </div>
         <div class="End">
             <h1>Why Me?</h1>
-            <p>I am a young passionate developer who is excited to get the change to
-                work on new projects and to learn new things! I am determaned to bring the best possable 
-                product to all those who may user it. I am currently taking Web Design Classes to help 
-                improve my skills in this feild! I hope I am offered a change to work with you on an 
-                amazing project!
+            <p>I am a young passionate developer who is excited to get the change to work on new projects and to learn new things!
+                I am determined to bring the best possible product to all those who may use it.
+                I am currently taking Web Design Classes to help improve my skills in this field! 
+                I hope I am offered a change to work with you on an amazing project!
             </p>
         </div>
         <div class="footer">
