--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,12 @@
         <div class="cardContainer">
             <div class="Aboutcard">
                 <h1>About Me</h1>
-                <p>Hello, my name is Ryan I am a Senior in Highschool. 
-                    I am from Leominster Massachuttes. I have worked on a wide range of projects 
+                <p>Hello, my name is Ryan I am from Leominster Massachusetts,
+                    I am currently a senior in Highschool. 
+                    I have worked on a wide range of projects 
                     and have gathered several different skills that may be of some use! I am always
-                    excited to learn new things and try out different experences! I hope i get to work with you 
-                    sometime. 
+                    excited to learn new things and try out different experences! I hope I get to work with you 
+                    sometime on an amazing project!
                 </p>
             </div>
             <div class="Experence">
@@ -64,11 +65,11 @@
                     <h3>Infin Passes</h3>
                     <p class="underHead">Position: Owner/Founder</p>
                     <p>Infin Passes is once again a very small student lead orgnzaition. Our main mission is 
-                        to help assist schools by creating them a customizable Happ Pass system that will fit 
-                        thier needs. This all started after I took AP computer science and for one of the project
-                        I made a demo version of what we have now. I then thought about scailing it up to fit an 
-                        entire school. Following that I fought my way up the line until the school eventualy bought it!
-                        This is the only product I made that I sell to others. 
+                        to help assist schools by creating them a customizable Hall Pass system that will fit 
+                        their needs. This all started after I took AP computer science class, for one of the project
+                        I made a demo version of what we have now. I then thought about scaling it up to fit an 
+                        entire school. Following that I markerted it to several different schools and communitys that it could be used for.
+                        This is the only product I made that I sell. 
                     </p>
                     <img src="./images/infinLogo.png" alt="Infin Passes Logo" class="projectImg">
                 </div>
@@ -80,7 +81,7 @@
                         started on my coding adventure! I saw that there wasn't very many open source ready to use apps out 
                         there of a ticketing app just like the Ticketing Tool discord bot. So I set out to create something amazing. 
                         Just a few months later I published the first version. and now just 2 years later I am still activly updating the 
-                        app to work with Discords new APIs! This app has also been featured in many different articals writting by
+                        app to work with Discord's new APIs! This app has also been featured in different articals writting by
                         many different people!
                         <ul>
                             <li><a href="https://autocode.com/guides/how-to-build-a-discord-moderation-bot/">How to build a Discord Moderation Bot?</a></li>
