--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
         <div class="topCard">
             <h1>Ryan Doyle</h1>
-            <p>978.881.4997 | rrdoyle41@gmail.com | <a href="./">Resume</a> | <a href="mailto:rrdoyle41@gmail.com">Contact Me</a></p>
+            <p>978.881.4997 | rrdoyle41@gmail.com | <a href="mailto:rrdoyle41@gmail.com">Contact Me</a></p>
         </div>
 
 
