--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
                 <ul>
                     <li>Full Stack Web Developer (2)</li>
                     <li>Roblox Studio Lua (1)</li>
-                    <li><a href="#blockly">CEO/Founder @ <a href="https://blocklycode.org">Blockly Code</a></a></li>
+                    <li><a href="#blockly">Founder/CEO @ <a href="https://blocklycode.org">Blockly Code</a></a></li>
                     <li><a href="#infin">Founder/Operations Manager @ Infin Passes</a></li>
                     <li><a href="#ticketing">Creator of the Advance Ticketing app @ Autocode</a></li>
                     <li>Development Manager @ Foxbridge Studios</li>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="projectCard" id="infin">
                     <h3>Infin Passes</h3>
-                    <p class="underHead">Position: Owner/Founder</p>
+                    <p class="underHead">Position: Founder/Operations Manager</p>
                     <p>Infin Passes is once again a very small student lead orgnzaition. Our main mission is 
                         to help assist schools by creating them a customizable Hall Pass system that will fit 
                         their needs. This all started after I took AP computer science class, for one of the project
