--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <div class="cardContainer">
             <div class="Aboutcard">
                 <h1>About Me</h1>
-                <p>Hello, my name is Ryan I am from Leominster Massachusetts,
+                <p>Hello, my name is Ryan. I am from Leominster, Massachusetts.
                     I am currently a senior in Highschool. 
                     I have worked on a wide range of projects 
                     and have gathered several different skills that may be of some use! I am always
