added in NFR to the projects

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
         <div class="topCard">
             <h1>Ryan Doyle</h1>
-            <p>978.881.4997 | rrdoyle41@gmail.com | <a href="mailto:rrdoyle41@gmail.com">Contact Me</a></p>
+            <p>978.881.4997 | magmadev8@gmail.com | <a href="mailto:magmadev8@gmail.com">Contact Me</a></p>
         </div>
 
 
@@ -37,8 +37,8 @@
                     <li><a href="#blockly">Founder/CEO @ <a href="https://blocklycode.org">Blockly Code</a></a></li>
                     <li><a href="#infin">Founder/Operations Manager @ Infin Passes</a></li>
                     <li><a href="#ticketing">Creator of the Advance Ticketing app @ Autocode</a></li>
-                    <li>Development Manager @ Foxbridge Studios</li>
-                    <li>Community Hero @ Autocode</li>
+                    <li><a href="#NFR">Development Manager @ Foxbridge Studios</a></li>
+                    <li>Retired Community Hero @ Autocode</li>
                 </ul>
             </div>
         </div>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="projectCard" id="ticketing">
                     <h3>Advance Ticketing System</h3>
-                    <p class="underHead">Views: 62.1k | Installs: 57.5K</p>
+                    <p class="underHead">Views: 64k+ | Installs: 58K+</p>
                     <p>This is one of my most sucessful apps I have published. With just under 60 thousand installs 
                         you can clearly see that people love this app! I created it 2 years ago when I was just getting 
                         started on my coding adventure! I saw that there wasn't very many open source ready to use apps out 
@@ -89,6 +89,25 @@
                         </ul>
                     </p>
                     <img src="./images/ticketing.png" alt="Advance Ticketing System Logo" class="projectImg">
+                </div>
+                <div class="projectCard" id="NFR">
+                    <h3>North Foxbridge Railways</h3>
+                    <p class="underHead">Position: Development Manager</p>
+                    <p>
+                        North Foxbridge Railways is a new game that I have been working on for the platform Roblox.
+                         I currently hold the position of Development Manager alongside 1 other co-worker.
+                          I oversee the entire development process of the game and manage a team of 12 developers 
+                          working on different projects for the community. As a Development Manager my job also
+                           includes meeting with the different departments giving them a brief overview of the
+                            changes that have been made to the game in the past update so they can inform the 
+                            supervisors. I do not have the direct community based role; it is more of a 
+                            behind the scenes working with the teams that bring the experience to life.
+                             On top of this I also do most of the scripting for the game's core system such
+                              as scripting all the functions for the players GUI, scripting the
+                               movement systems for the trains, ect. I have been in this position
+                                since the game was founded and through my time I have learned many new things
+                                 about myself and about the team I work with.                    </p>
+                    <img src="./images/NFR-transparent.PNG" alt="North Foxbridge Railways Logo" class="projectImg">
                 </div>
             </div> <!--Project List-->
         </div>
