fixed formatting i hope :)

--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,9 @@
                     </p>
                     <img src="./images/ticketing.png" alt="Advance Ticketing System Logo" class="projectImg">
                 </div>
+                
+            </div> <!--Project List-->
+            <div class="bottomProject">
                 <div class="projectCard" id="NFR">
                     <h3>North Foxbridge Railways</h3>
                     <p class="underHead">Position: Development Manager</p>
@@ -109,7 +112,7 @@
                                  about myself and about the team I work with.                    </p>
                     <img src="./images/NFR-transparent.PNG" alt="North Foxbridge Railways Logo" class="projectImg">
                 </div>
-            </div> <!--Project List-->
+            </div>
         </div>
         <div class="End">
             <h1>Why Me?</h1>
