fixed more styling...

--- a/public/index.html
+++ b/public/index.html
@@ -93,9 +93,13 @@
                 
             </div> <!--Project List-->
             <div class="bottomProject">
-                <div class="projectCard" id="NFR">
-                    <h3>North Foxbridge Railways</h3>
-                    <p class="underHead">Position: Development Manager</p>
+                <div class="bottomProjectCard" id="NFR">
+                    <div class="cardTop">
+                        <h3>North Foxbridge Railways</h3>
+                        <p class="underHead">Position: Development Manager</p>
+                    </div>
+                    <img src="./images/NFR-transparent.PNG" alt="North Foxbridge Railways Logo" class="projectImg">
+
                     <p>
                         North Foxbridge Railways is a new game that I have been working on for the platform Roblox.
                          I currently hold the position of Development Manager alongside 1 other co-worker.
@@ -110,7 +114,6 @@
                                movement systems for the trains, ect. I have been in this position
                                 since the game was founded and through my time I have learned many new things
                                  about myself and about the team I work with.                    </p>
-                    <img src="./images/NFR-transparent.PNG" alt="North Foxbridge Railways Logo" class="projectImg">
                 </div>
             </div>
         </div>
