--- a/public/index.html
+++ b/public/index.html
@@ -98,22 +98,26 @@
                         <h3>North Foxbridge Railways</h3>
                         <p class="underHead">Position: Development Manager</p>
                     </div>
-                    <img src="./images/NFR-transparent.PNG" alt="North Foxbridge Railways Logo" class="projectImg">
+                    <div class="thingsthat">
+                        <img src="./images/NFR-transparent.PNG" alt="North Foxbridge Railways Logo" class="projectImg">
 
-                    <p>
+                        <p>
                         North Foxbridge Railways is a new game that I have been working on for the platform Roblox.
-                         I currently hold the position of Development Manager alongside 1 other co-worker.
-                          I oversee the entire development process of the game and manage a team of 12 developers 
-                          working on different projects for the community. As a Development Manager my job also
-                           includes meeting with the different departments giving them a brief overview of the
-                            changes that have been made to the game in the past update so they can inform the 
-                            supervisors. I do not have the direct community based role; it is more of a 
-                            behind the scenes working with the teams that bring the experience to life.
-                             On top of this I also do most of the scripting for the game's core system such
-                              as scripting all the functions for the players GUI, scripting the
-                               movement systems for the trains, ect. I have been in this position
-                                since the game was founded and through my time I have learned many new things
-                                 about myself and about the team I work with.                    </p>
+                        I currently hold the position of Development Manager alongside 1 other co-worker.
+                        I oversee the entire development process of the game and manage a team of 12 developers 
+                        working on different projects for the community. As a Development Manager my job also
+                        includes meeting with the different departments giving them a brief overview of the
+                        changes that have been made to the game in the past update so they can inform the 
+                        supervisors. I do not have the direct community based role; it is more of a 
+                        behind the scenes working with the teams that bring the experience to life.
+                        On top of this I also do most of the scripting for the game's core system such
+                        as scripting all the functions for the players GUI, scripting the
+                        movement systems for the trains, ect. I have been in this position
+                        since the game was founded and through my time I have learned many new things
+                        about myself and about the team I work with.        
+                        </p>
+                    </div>
+                    
                 </div>
             </div>
         </div>
