more minor changes

--- a/public/index.html
+++ b/public/index.html
@@ -95,13 +95,17 @@
             <div class="bottomProject">
                 <div class="bottomProjectCard" id="NFR">
                     <div class="cardTop">
-                        <h3>North Foxbridge Railways</h3>
-                        <p class="underHead">Position: Development Manager</p>
+                        <h3 style="text-decoration: none;
+                        color: white;">North Foxbridge Railways</h3>
+                        <p class="underHead" style="text-align: center;">Position: Development Manager</p>
                     </div>
-                    <div class="thingsthat">
+                    <div class="thingsthat" style="display: flex;">
                         <img src="./images/NFR-transparent.PNG" alt="North Foxbridge Railways Logo" class="projectImg">
+                        
+                    
+                        <p style="padding: 5px;
+                        font-family: var(--family2);">
 
-                        <p>
                         North Foxbridge Railways is a new game that I have been working on for the platform Roblox.
                         I currently hold the position of Development Manager alongside 1 other co-worker.
                         I oversee the entire development process of the game and manage a team of 12 developers 
