fixed ore formatteding

--- a/public/index.html
+++ b/public/index.html
@@ -96,8 +96,11 @@
                 <div class="bottomProjectCard" id="NFR">
                     <div class="cardTop">
                         <h3 style="text-decoration: none;
-                        color: white;">North Foxbridge Railways</h3>
-                        <p class="underHead" style="text-align: center;">Position: Development Manager</p>
+                        color: white;
+                        font-family: var(--family3);
+                            ">North Foxbridge Railways</h3>
+                        <p class="underHead" style="    font-family: var(--family3);
+                        ">Position: Development Manager</p>
                     </div>
                     <div class="thingsthat" style="display: flex;">
                         <img src="./images/NFR-transparent.PNG" alt="North Foxbridge Railways Logo" class="projectImg">
