added in padding

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
             </div> <!--Project List-->
             <div class="bottomProject">
                 <div class="bottomProjectCard" id="NFR">
-                    <div class="cardTop">
+                    <div class="cardTop" style="padding-left:15px;">
                         <h3 style="text-decoration: none;
                         color: white;
                         font-family: var(--family3);
