--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,14 @@
 
         <div class="topCard">
             <h1>Ryan Doyle</h1>
-            <p>978.881.4997 | magmadev8@gmail.com | <a href="mailto:magmadev8@gmail.com">Contact Me</a></p>
+            <p><a href="mailto:magmadev8@gmail.com">Contact Me</a> | My Timezone: EST</p>
         </div>
 
 
         <div class="cardContainer">
             <div class="Aboutcard">
                 <h1>About Me</h1>
-                <p>Hello, my name is Ryan. I am from Leominster, Massachusetts.
-                    I am currently a senior in Highschool. 
+                <p>Hello, my name is Ryan. I am from the US! 
                     I have worked on a wide range of projects 
                     and have gathered several different skills that may be of some use! I am always
                     excited to learn new things and try out different experences! I hope I get to work with you 
@@ -36,7 +35,7 @@
                     <li>Roblox Studio Lua (1)</li>
                     <li><a href="#blockly">Founder/CEO @ <a href="https://blocklycode.org">Blockly Code</a></a></li>
                     <li><a href="#infin">Founder/Operations Manager @ Infin Passes</a></li>
-                    <li><a href="#ticketing">Creator of the Advance Ticketing app @ Autocode</a></li>
+                    <li><a href="#ticketing">Creator of the Advance Ticketing App @ Autocode</a></li>
                     <li><a href="#NFR">Development Manager @ Foxbridge Studios</a></li>
                     <li>Retired Community Hero @ Autocode</li>
                 </ul>
