--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Ryan Doyle - Portfolio</title>
+        <title>Ryan Doyle - Profile</title>
         <link rel="Stylesheet" href="./styles/style.css">
         <link rel="Stylesheet" href="./styles/header.css">
         <link rel="Stylesheet" href="./styles/project.css">
