--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,6 @@
                             idea that anyone regardless of who you are can come and learn the basics of coding for free.
                             This is by far the biggest project I have worked on, and yet the one I am most proud of!
                         </p>
-                        <img src="./images/blocklyLogo.png" alt="Blockly Code Logo" class="projectImg">
                 </div>
                 <div class="projectCard" id="infin">
                     <h3>Infin Passes</h3>
@@ -70,11 +69,10 @@
                         entire school. Following that I markerted it to several different schools and communitys that it could be used for.
                         This is the only product I made that I sell. 
                     </p>
-                    <img src="./images/infinLogo.png" alt="Infin Passes Logo" class="projectImg">
                 </div>
                 <div class="projectCard" id="ticketing">
-                    <h3>Advance Ticketing System</h3>
-                    <p class="underHead">Views: 64k+ | Installs: 58K+</p>
+                    <h3><a href="https://autocode.com/Magma69/templates/ticketing/">Advance Ticketing System</a></h3>
+                    <p class="underHead">Views: 66k+ | Installs: 58.5K+</p>
                     <p>This is one of my most sucessful apps I have published. With just under 60 thousand installs 
                         you can clearly see that people love this app! I created it 2 years ago when I was just getting 
                         started on my coding adventure! I saw that there wasn't very many open source ready to use apps out 
@@ -87,7 +85,6 @@
                             <li><a href="https://www.youtube.com/watch?app=desktop&v=foAFFvtml5k">5 Discord bot you need</a></li>
                         </ul>
                     </p>
-                    <img src="./images/ticketing.png" alt="Advance Ticketing System Logo" class="projectImg">
                 </div>
                 
             </div> <!--Project List-->
